Corregi la referencia a la hoja de estilos del footer

--- a/Index.HTML
+++ b/Index.HTML
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="CSS/Trama.css">
   <link rel="stylesheet" href="CSS/Historia.css">
   <link rel="stylesheet" href="CSS/Header.css">
-  <link rel="stylesheet" href="CSS/Footer.css">
+  <link rel="stylesheet" href="/CSS/Footer.css">
 </head>
 
 <body>
@@ -325,9 +325,8 @@
   </main>
 
 </body>
-<footer class="Pie">
-  <div class="boxpie">
-    <!--<img src="/CSS/Imagenes/cangrejo.webp">-->
+<footer>
+  <div class="pata">
   </div>
 
 </footer>
