--- a/Index.HTML
+++ b/Index.HTML
@@ -52,7 +52,7 @@
 
     <!-- Leonor -->
     <section class="Trama" id="Trama">
-      <h2 id="titulos-principales" class="centrado">Trama</h2>
+      <h2 class="centrado" id="titulos-principales" >Trama</h2>
       <section class="bordes">
         <div id="texto">
           <div class="parrafos">
@@ -316,7 +316,7 @@
     </div>
 
   </section>
-  </main>
+</main>
 
 </body>
 <footer>
