Responsive para pantallas pequeñas

--- a/Index.HTML
+++ b/Index.HTML
@@ -152,7 +152,7 @@
             </div>
             <div class="card-face back">
               <h2>Colorimetria</h2>
-              <p><img src="CSS/Imagenes/Imagenes Estetica/colorimetria.jfif" alt=""></p>
+              <p ><img src="CSS/Imagenes/Imagenes Estetica/colorimetria.jfif" alt="" class="colori"></p>
             </div>
           </div>
           <div class="card">
@@ -172,7 +172,7 @@
             </div>
             <div class="card-face back">
               <h2>Rasgos</h2>
-              <img class="imagen-humor" src="CSS/Imagenes/Imagenes Estetica/bob-dinero.webp"alt="">
+              <img class="imagen-humor" src="CSS/Imagenes/Imagenes Estetica/bob-mafioso.png"alt="">
               <p>La serie se convirtió en una franquicia multimedia y es la quinta serie animada estadounidense de mayor
                 duración. También es la propiedad intelectual más rentable para Paramount Consumer Products.</p>
             </div>
