--- a/Index.HTML
+++ b/Index.HTML
@@ -321,6 +321,21 @@
 </body>
 <footer>
   <div class="pata">
+    <div class="contenedor-footer">
+      <div>
+        Stephen Hillenburg
+      </div>
+      <div>
+        Wiki Oficial
+      </div>
+      <div>
+        <img src="CSS/Imagenes/GitHub-Logo.png"  alt="GitHub-Logo" class="logogh">
+      </div>
+    </div>
+    <div class="logonick">
+      <img src="CSS/Imagenes/Nicklogo.png" alt="logo">
+    </div>
+   
   </div>
 
 </footer>
