Cambions Finales (miguel)
Se realizaron las correciones de la sección, por sugerencia se colocaron los memes como una solo imagen png, se colocaron horizontalmente y se les puso adentro de un marco con distinto color para todos, tambien se agregaron los documentos respectivos de las fotos.

--- a/Index.HTML
+++ b/Index.HTML
@@ -10,10 +10,12 @@
 <link rel="stylesheet" href="CSS/Style.css">
 <link rel="stylesheet" href="CSS/Curiosidades y Teorias.css">
 <link rel="stylesheet" href="CSS/Impacto-Cultural.css">
+<link rel="stylesheet" href="CSS/memes.css">
 <link rel="stylesheet" href="CSS/Estetica.css">
 <link rel="stylesheet" href="CSS/Personajes.css">
 <link rel="stylesheet" href="CSS/Trama.css">
 <link rel="stylesheet" href="CSS/Historia.css">
+
 
 </head>
 <body>
@@ -183,34 +185,21 @@
             </div>
         </div>
         </section>
-
     <br>       
     <section class="memes">
-        <h2 id="titulos-principales">Memes</h2>
-        <div class="container">
-            <div class="column">
-                <div class="image-text">
-                    <div class="column">
-                        <div class="image-text">
-                            <img src="CSS/Imagenes/BS11.png" alt="Imagen 5">   
-                        </div>
-                    </div>
-                    <p>Yo cuando puse “hello world”</p>
-                </div>
-            </div>
-            <div class="column">
-                <div class="image-text">
-                    <img src="CSS/Imagenes/BS3.png" alt="Imagen 5">
-                    <p>-Y porque escogiste ingeniería en sistemas<br/>  -pues...</p>
-                </div>
-            </div>
-            <div class="column">
-                <div class="image-text">
-                    <img src="CSS/Imagenes/BS4.png" alt="Imagen 6">
-                    <p>Yo viendo mi código terminado <br/> (no funciona)</p>
-                </div>
-            </div>
+
+            
+            <h2 id="titulos-principales">Memes</h2>
+    
+<br><br><br><br><br>
+<div class="container">
+    <div class="divbob1"><img src="CSS/Imagenes/BOB11.png" alt="Imagen bob esponja">
+    </div>
+    <div class="divbob2"><img src="CSS/Imagenes/BS2.22.png" alt="Imagen patricio estrella">
+      </div>
+      <div class="divbob3"><img src="CSS/Imagenes/BOB4.32.png" alt="Imagen calamardo">
         </div>
+
     </section>
     </main>
 </body>
