--- a/Index.HTML
+++ b/Index.HTML
@@ -321,20 +321,20 @@
 </body>
 <footer>
   <div class="pata">
+    <div class="logon">
+      <img src="CSS/Imagenes/Nicklogo.png" alt="logo" class="logonick">
+    </div>
     <div class="contenedor-footer">
-      <div>
-        Stephen Hillenburg
-      </div>
-      <div>
-        Wiki Oficial
-      </div>
-      <div>
+      <div class="logogit">
         <img src="CSS/Imagenes/GitHub-Logo.png"  alt="GitHub-Logo" class="logogh">
+        <p class="creador">
+          Stephen Hillenburg
+          <br>
+          Wiki Oficial
+        </p>
       </div>
     </div>
-    <div class="logonick">
-      <img src="CSS/Imagenes/Nicklogo.png" alt="logo">
-    </div>
+    
    
   </div>
 
