Sección Footer Leo-Mily
Se ajusto el tamaño del texto y las imágenes.

--- a/Index.HTML
+++ b/Index.HTML
@@ -322,7 +322,7 @@
 <footer>
   <div class="pata">
     <div class="logon">
-      <img src="CSS/Imagenes/Nicklogo.png" alt="logo" class="logonick">
+      <img src="CSS/Imagenes/logonick.png" alt="logo" class="logonick">
     </div>
     <div class="contenedor-footer">
       <div class="logogit">
