Corrigiendo el footer

--- a/Index.HTML
+++ b/Index.HTML
@@ -322,17 +322,16 @@
 <footer>
   <div class="pata">
     <div class="logon">
-      <img src="CSS/Imagenes/logonick.png" alt="logo" class="logonick">
+      <img src="CSS/Imagenes/logonick.png" class="logotiponickel" alt="logo">
     </div>
     <div class="contenedor-footer">
       <div class="logogit">
-        <img src="CSS/Imagenes/GitHub-Logo.png"  alt="GitHub-Logo" class="logogh">
-        <p class="creador">
-          Stephen Hillenburg
-          <br>
-          Wiki Oficial
-        </p>
+        <img src="CSS/Imagenes/GitHub-Logo.png"  class="logogh" href="https://github.com/g4usSi/Proyecto-OctoVault"  alt="GitHub-Logo">
       </div>
+        <ul>
+          <li><a href="https://historia-biografia.com/stephen-hillenburg/">Stephen Hillenburg</a></li>
+          <li><a href="">Wiki Oficial</a></li>
+        </ul>
     </div>
     
    
