Se mejoraron los enlaces

--- a/Index.HTML
+++ b/Index.HTML
@@ -326,11 +326,12 @@
     </div>
     <div class="contenedor-footer">
       <div class="logogit">
-        <img src="CSS/Imagenes/GitHub-Logo.png"  class="logogh" href="https://github.com/g4usSi/Proyecto-OctoVault"  alt="GitHub-Logo">
+        <ul><li><a href="https://github.com/g4usSi/Proyecto-OctoVault.git">  <img src="CSS/Imagenes/GitHub-Logo.png"  class="logogh" href="https://github.com/g4usSi/Proyecto-OctoVault"  alt="GitHub-Logo"></a></li></ul>
+      
       </div>
         <ul>
-          <li><a href="https://historia-biografia.com/stephen-hillenburg/">Stephen Hillenburg</a></li>
-          <li><a href="">Wiki Oficial</a></li>
+          <li><a  class="enlace" href="https://historia-biografia.com/stephen-hillenburg/">Stephen Hillenburg</a></li>
+          <li ><a class="enlace" href="">Wiki Oficial</a></li>
         </ul>
     </div>
     
