Corregi el header
agregue textura y corregi margenes de historia

--- a/Index.HTML
+++ b/Index.HTML
@@ -331,7 +331,7 @@
       </div>
         <ul>
           <li><a  class="enlace" href="https://historia-biografia.com/stephen-hillenburg/">Stephen Hillenburg</a></li>
-          <li ><a class="enlace" href="">Wiki Oficial</a></li>
+          <li ><a class="enlace" href="https://bobesponja.fandom.com/wiki/Bob_Esponja">Wiki Oficial</a></li>
         </ul>
     </div>
     
