Agregue correcciones y transicion suave

--- a/Index.HTML
+++ b/Index.HTML
@@ -22,6 +22,7 @@
   <link rel="stylesheet" href="CSS/Historia.css">
   <link rel="stylesheet" href="CSS/Header.css">
   <link rel="stylesheet" href="/CSS/Footer.css">
+  <link rel="icon" href="/CSS/Imagenes/icon.svg">
 </head>
 
 <body>
@@ -79,7 +80,7 @@
     </section>
 
     <!-- Amelia -->
-    <section class="Historia">
+    <section class="Historia" id="Historia">
         <h2 id="titulos-principales" class="centrado">Historia</h2>
         <section class="contenerhistoria">
             <div class="caja">
