Responsive del Header

--- a/Index.HTML
+++ b/Index.HTML
@@ -43,6 +43,20 @@
     </div>
 
     <div class="banner">
+      <div class="espacio-header2">
+        <nav>
+          <ul>
+            <li><a href="#Trama">Trama</a></li>
+            <li><a href="#Historia">Historia</a></li>
+            <li><a href="#Estetica">Estetica</a></li>
+            <li><a href="#Personajes">Personajes</a></li>
+            <li><a href="#Curiosidades-Teorias"> Curiosidades y Teorias</a></li>
+          </ul>
+        </nav>
+        <div class="logo">
+          <img src="CSS/Imagenes/Imagenes Estetica/logo.webp" alt="Logo">
+        </div>
+      </div>
 
     </div>
   </header>
