--- a/Index.HTML
+++ b/Index.HTML
@@ -22,6 +22,7 @@
   <link rel="stylesheet" href="CSS/Historia.css">
   <link rel="stylesheet" href="CSS/Header.css">
   <link rel="stylesheet" href="/CSS/Footer.css">
+  <link rel="icon" href="/CSS/Imagenes/icon.svg">
 </head>
 
 <body>
@@ -93,7 +94,7 @@
     </section>
 
     <!-- Amelia -->
-    <section class="Historia">
+    <section class="Historia" id="Historia">
         <h2 id="titulos-principales" class="centrado">Historia</h2>
         <section class="contenerhistoria">
             <div class="caja">
@@ -345,7 +346,7 @@
       </div>
         <ul>
           <li><a  class="enlace" href="https://historia-biografia.com/stephen-hillenburg/">Stephen Hillenburg</a></li>
-          <li ><a class="enlace" href="">Wiki Oficial</a></li>
+          <li ><a class="enlace" href="https://bobesponja.fandom.com/wiki/Bob_Esponja">Wiki Oficial</a></li>
         </ul>
     </div>
     
