--- a/Index.HTML
+++ b/Index.HTML
@@ -22,6 +22,8 @@
   <link rel="stylesheet" href="CSS/Historia.css">
   <link rel="stylesheet" href="CSS/Header.css">
   <link rel="stylesheet" href="/CSS/Footer.css">
+  <link rel="stylesheet" href="/CSS/memes.css">
+
 </head>
 
 <body>
@@ -316,6 +318,22 @@
     </div>
 
   </section>
+
+  <section class="memes">
+
+            
+    <h2 id="titulos-principales">Memes</h2>
+
+<br><br><br><br><br>
+<div class="container">
+<div class="divbob1"><img src="CSS/Imagenes/BOB11.png" alt="Imagen bob esponja">
+</div>
+<div class="divbob2"><img src="CSS/Imagenes/BS2.22.png" alt="Imagen patricio estrella">
+</div>
+<div class="divbob3"><img src="CSS/Imagenes/BOB4.32.png" alt="Imagen calamardo">
+</div>
+
+</section>
 </main>
 
 </body>
